# Edu_Platform

./: .env  main.py  pyproject.toml
src/: DB_creater.py  config.py  controller.py  db.py  problems.py  queries.py  services.py  submissions.py
src/autentification/: auth.py
src/migrations/: create_user_table.py
